# receipt-rocket-api

./: .env.example  .gitignore  pyproject.toml  pytest.ini
.github/workflows/: python-app.yml
alembic/: env.py
alembic/versions/: 0ac865d6e3cc_create_api_logs.py  14a5f2e1d5e6_initial_migration.py  3fd998241928_add_terminal_position.py  53853b8513a5_create_api_logs.py  57fffa0d9e97_add_user_status_and_action_times.py  97ca24114eb6_save_taxpayer_id.py  ac2ca0877420_add_transaction_count.py  db401de28097_create_packages_table.py  dba8170ea6a2_init.py
apps/: main.py
apps/activation/: routes.py  schema.py
apps/auth/: routes.py
apps/config/: routes.py  schema.py
apps/dictionary/: routes.py
apps/products/: routes.py  schema.py
apps/profiles/: routes.py  schema.py
apps/roles/: routes.py  schema.py
apps/routes/: routes.py  schema.py
apps/sales/: routes.py  schema.py
apps/subscriptions/: routes.py  schema.py
apps/tenants/: routes.py  schema.py
apps/terminals/: routes.py  schema.py
apps/users/: routes.py  schema.py
core/: __init__.py  auth.py  database.py  enums.py  models.py  settings.py  utils.py
core/seeders/: dictionary_seeder.py  roles_seeder.py  user_seeder.py
core/services/: activation.py  blocking.py  config.py  sales.py
core/services/responses/: block_status_response.py  mra_response.py  sales_response.py
core/templates/: welcome_email.html
core/utils/: api_logger.py  helpers.py  invoice_number_generator.py
jobs/: submit_offline_transactions.py
receipt_rocket_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
scripts/: seed.py
tests/: conftest.py  test_auth.py  test_config.py  test_dictionary.py  test_products.py  test_profiles.py  test_roles.py  test_routes.py  test_sales.py  test_subscriptions.py  test_tenants.py  test_terminal.py  test_terminal_activation.py  test_users.py
tests/data/: activation_response.json  blocking_message_response.json  certificate_validation_response.json  config_response.json  products_response.json  sales_response.json  sales_response_blocked_terminal.json  sales_response_outdated_config.json  sales_response_tin_not_found.json  unblock_status_blocked_response.json  unblock_status_unblocked_response.json
utils/: emailer.py
