[project]
name = "receipt-rocket-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "python-dotenv",
    "alembic",
    "pytest",
    "pytest-asyncio",
    "psycopg2-binary",
    "requests",
    "sqlalchemy-utils",
    "pydantic-settings",
    "python-multipart",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=3.1.7",
    "python-jose",
    "httpx>=0.23.0,<0.24.0",
    "rstr",
    "respx",
    "slowapi",
    "pydantic[email]",
    "aiosmtplib"
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "isort",
    "mypy"
]
