[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "receipt-rocket-api"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "sqlalchemy",
    "python-dotenv",
    "alembic",
    "pytest",
    "pytest-asyncio",
    "psycopg2-binary",
    "requests",
    "sqlalchemy-utils",
    "pydantic-settings",
    "python-multipart",
    "passlib[bcrypt]>=1.7.4,<2.0.0",
    "bcrypt>=3.2.0,<4.0.0",
    "python-jose",
    "httpx>=0.23.0,<0.24.0",
    "rstr",
    "respx",
    "slowapi",
    "pydantic[email]",
    "aiosmtplib",
    "jinja2",
    "aiosmtpd",
    "mysql-connector-python"
]

[project.optional-dependencies]
dev = [
    "pytest-cov",
    "black",
    "isort",
    "mypy"
]

[tool.setuptools]
packages = ["core", "apps", "alembic"]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.json", "*.txt", "*.html", "*.sql", "*.ini"]
"core" = ["*.json", "*.txt", "*.html", "*.sql", "*.ini"]
"apps" = ["*.json", "*.txt", "*.html", "*.sql", "*.ini"]
"alembic" = ["*.ini", "*.mako", "*.py"]
